--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -17,7 +17,38 @@ Template last updated on 03-23-2020 by Anne (remove events, Discord 17k)
 
 [View this email]() in your browser.
 
-Hi everyone! It's the latest Python for Microcontrollers newsletter, brought you by the community! We're on [Discord](https://discord.gg/HYqvREz), [Twitter](https://twitter.com/search?q=circuitpython&src=typed_query&f=live), and for past newsletters - [view them all here](https://www.adafruitdaily.com/category/circuitpython/). If you're reading this on the web, [subscribe here](https://www.adafruitdaily.com/). Let's get started!
+Hi everyone! It's the latest Python for Microcontrollers newsletter, brought you by the community! We're on [Discord](https://discord.gg/HYqvREz), [Twitter](https://twitter.com/search?q=circuitpython&src=typed_query&f=live), and for past newsletters - [view them all here](https://www.adafruitdaily.com/category/circuitpython/). If you're reading this on the web, [subscribe here](https://www.adafruitdaily.com/).Here we go!
+
+## CircuitPython 5.1.0 Release Candidate 0
+
+[![CircuitPython 5.1.0 rc0](../assets/03312020/03312020cp51.jpg)](https://circuitpython.org/)
+
+This is CircuitPython 5.1.0-rc0, the latest minor revision of CircuitPython, and a release candidate. If this release does not have show-stopper issues, it will be re-released as 5.1.0, the first 5.1.x stable release. Downloads are available from [circuitpython.org](https://circuitpython.org/downloads)! 
+
+- New features and improvements since 5.0.0
+- ulab, a numpy-like fast vector module (#2583 and others). Thanks @v923z, @jepler
+- Perform mathematical operations 10-50x as fast as raw CircuitPython
+- Enabled on almost all boards except those with samd21 microcontrollers
+- Guide: https://learn.adafruit.com/ulab-crunch-numbers-fast-with-circuitpython/overview
+- Support for “f-strings”, a more convenient way to build strings dynamically. (#2690) Thanks @klardotsh, @jepler
+- Enabled on almost all boards except those with samd21 microcontrollers.
+- mpy-cross signals certain syntax errors better (#2670). Thanks @jepler
+- nRF now properly handles unaligned disk reads (#2662). Thanks @jepler
+- New builds of unix port and mpy-cross facilitate testing (#2672). Thanks @jepler
+- STM port: add PulseOut (#2668). Thanks @hierophect
+- STM port: add PulseIn (#2697). Thanks @hierophect
+- STM port: fix some GPIO clocking issues (#2680). Thanks @hierophect
+- STM port: rename directory to reflect the scope of the port (#2699). Thanks @hierophect
+- STM port: change ST drivers submodule to match TinyUSB (#2701). Thanks @hierophect
+- Winterbloom Sol: Disable USB HID descriptor (#2681). Thanks @theacodes
+- Support importing native modules in native packages (#2657). Thanks @tannewt
+- Document proximity and sound_level in design guide (#2684). Thanks @caternuson
+- Improve argument validation in displayio (#2666). thanks @dhalbert
+- Add TG-Watch02A board (#2695). Thanks @TG-Techie
+- Add UARTLogger2 board (#2705). Thanks @nightskysk
+- Fix DotStar status LED init (#2712). Thanks @tannewt
+
+Thank you to all who used, tested, contributed, helped out, and participated on GitHub and/or Discord. - [Blog](https://blog.adafruit.com/2020/03/26/circuitpython-5-1-0-rc-0-released-adafruit-circuitpython/)
 
 ## News from around the web!
 
