--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -6,14 +6,13 @@ categories: weekly
 ---
 
 - [X] Kattni updates
-- [ ] change date
+- [X] change date
 - [ ] update title
 - [ ] Feature story
 - [ ] Update [![](../assets/DIR-LOCATION/)]() for images
 - [ ] All images 550w max only
 - [ ] Link "View this email in your browser."
 
-Template last updated on 03-23-2020 by Anne (remove events, Discord 17k)
 
 [View this email]() in your browser.
 
@@ -49,6 +48,16 @@ CircuitPython 5.1.0-rc0 is the latest minor revision of CircuitPython, and now a
 - Fix DotStar status LED init (#2712). Thanks @tannewt
 
 Thank you to all who used, tested, contributed, helped out, and participated on GitHub and/or Discord. - [Blog](https://blog.adafruit.com/2020/03/26/circuitpython-5-1-0-rc-0-released-adafruit-circuitpython/)
+
+## HackSpace Magazine Issue 29
+
+[![HackSpace Magazine Issue 29](../assets/03312020/03312020hs.jpg)](https://hackspace.raspberrypi.org/issues/29)
+
+The new HackSpace Magazine Issue 29 presents making a frogger-like game in CircuitPython. An Adafruit Circuit Playground Express is used as a tilt-sensor controller.
+
+> The tribute to this game in the new Code the Classics Volume 1 book is called Infinite Bunner, and works in much the same way, except you control a bunny. All this hopping got us thinking about a controller. Our initial idea was that since the animals jump, so should the controller. The accelerometer can detect freefall, so it shouldn’t be too hard to convert those into button presses. However, it turns out that computer-controlled frogs and rabbits can jump much, much faster than humans can, and we really struggled to get a working game mechanic, so we compromised a little and worked with ‘flicks’.
+
+[Blog](https://blog.adafruit.com/2020/03/24/hackspace-magazine-issue-29-make-a-frogger-style-game-with-circuitpython-and-circuit-playground-express-circuitpython-circuitplaygroundexpress-gaming-hackspacemag/) and [Magazine](https://hackspace.raspberrypi.org/issues/29).
 
 ## News from around the web!
 
