--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -63,7 +63,7 @@ The new HackSpace Magazine Issue 29 presents making a frogger-like game in Circu
 
 [![](../assets/DIR-LOCATION/)]()
 
-#ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).
+#ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/03/24/together-well-make-it-python-adafruit-circuitpython-circuitpython-micropython-thepsf-adafruit/)? [We'll make it together](https://blog.adafruit.com/2020/03/22/covid/).
 
 ## Made with Mu
 
