--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -59,6 +59,16 @@ The new HackSpace Magazine Issue 29 presents making a frogger-like game in Circu
 
 [Blog](https://blog.adafruit.com/2020/03/24/hackspace-magazine-issue-29-make-a-frogger-style-game-with-circuitpython-and-circuit-playground-express-circuitpython-circuitplaygroundexpress-gaming-hackspacemag/) and [Magazine](https://hackspace.raspberrypi.org/issues/29).
 
+## EduBlocks 3.1.0
+
+[![edublocks 3.1.0](../assets/03312020/03312020edublocks.jpg)](https://beta.app.edublocks.org/)
+
+Joshua Lowe has provided an update on the state of EduBlocks, a tool to make the transition from Scratch to Python easy via drag and drop Python.
+
+You can view the new updates via https://beta.app.edublocks.org and anything will be uploaded there too.
+
+Josh posts that “I’d really like to get some feedback from you about the changes I’ve made as this is really helpful for me to know.“ - [Blog](https://blog.adafruit.com/2020/03/26/updates-for-edublocks-python-education-programming-edu_blocks/)
+
 ## News from around the web!
 
 [![](../assets/DIR-LOCATION/)]()
