--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -71,7 +71,7 @@ Josh posts that “I’d really like to get some feedback from you about the cha
 
 ## News from around the web!
 
-[![](../assets/DIR-LOCATION/)]()
+Elizabeth Warren's campaign is making its software Open Source, some of which use Python - [Slashdot](https://news.slashdot.org/story/20/03/27/1958235/elizabeth-warrens-campaign-is-making-its-software-open-source) and [GitHub](https://github.com/Elizabeth-Warren)
 
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/03/24/together-well-make-it-python-adafruit-circuitpython-circuitpython-micropython-thepsf-adafruit/)? [We'll make it together](https://blog.adafruit.com/2020/03/22/covid/).
 
