--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -75,6 +75,10 @@ Josh posts that “I’d really like to get some feedback from you about the cha
 
 Bryan from the Adafruit team (@siddacious) has created an apps menu for the Open Hardware Summit wrist badge. - [Twitter](https://twitter.com/pdp7/status/1243297511747575810)
 
+[![CircuitPython on ZynqBerry](../assets/03312020/03312020zynq.jpg)](https://twitter.com/Hacksterio/status/1244613681482289153)
+
+CircuitPython slithers its way onto the ZynqBerry SBC - [Twitter](https://twitter.com/Hacksterio/status/1244613681482289153) and [Hackster.io](https://www.hackster.io/whitney-knitter/pi-os-for-zynqberry-installing-adafruit-circuitpython-41ed67)
+
 Elizabeth Warren's campaign is making its software Open Source, some of which use Python - [Slashdot](https://news.slashdot.org/story/20/03/27/1958235/elizabeth-warrens-campaign-is-making-its-software-open-source) and [GitHub](https://github.com/Elizabeth-Warren)
 
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/03/24/together-well-make-it-python-adafruit-circuitpython-circuitpython-micropython-thepsf-adafruit/)? [We'll make it together](https://blog.adafruit.com/2020/03/22/covid/).
