--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -81,6 +81,10 @@ CircuitPython slithers its way onto the ZynqBerry SBC - [Twitter](https://twitte
 
 A Deep Dive into BLE Packets and Events - [NovelBits](https://www.novelbits.io/deep-dive-ble-packets-events/)
 
+[![CircuitPython CO2 Sensor](../assets/03312020/03312020co2.jpg)](https://twitter.com/jhitze/status/1244054529022275586)
+
+An inexpensive, indoor portable carbon dioxide meter with CircuitPython, HalloWing, and a Grove CO2 sensor - [Twitter](https://twitter.com/jhitze/status/1244054529022275586)
+
 Elizabeth Warren's campaign is making its software Open Source, some of which use Python - [Slashdot](https://news.slashdot.org/story/20/03/27/1958235/elizabeth-warrens-campaign-is-making-its-software-open-source) and [GitHub](https://github.com/Elizabeth-Warren)
 
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/03/24/together-well-make-it-python-adafruit-circuitpython-circuitpython-micropython-thepsf-adafruit/)? [We'll make it together](https://blog.adafruit.com/2020/03/22/covid/).
