--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -71,6 +71,10 @@ Josh posts that “I’d really like to get some feedback from you about the cha
 
 ## News from around the web!
 
+[![Gizmo Sprites](../assets/03312020/03312020gizmo.gif)](https://twitter.com/gbushta/status/1243165512210628608)
+
+Using a Circuit Playground and Gizmo display to move a sprite on screen (with collision detection) with CircuitPython - [Twitter](https://twitter.com/gbushta/status/1243165512210628608)
+
 [![OHWS Wrist Badge](../assets/03312020/03312020ohws.jpg)](https://twitter.com/pdp7/status/1243297511747575810)
 
 Bryan from the Adafruit team (@siddacious) has created an apps menu for the Open Hardware Summit wrist badge. - [Twitter](https://twitter.com/pdp7/status/1243297511747575810)
