--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -95,6 +95,10 @@ Joey Castillo is refining a thermometer hat project using a custom SAMD21E board
 
 Elizabeth Warren's campaign is making its software Open Source, some of which use Python - [Slashdot](https://news.slashdot.org/story/20/03/27/1958235/elizabeth-warrens-campaign-is-making-its-software-open-source) and [GitHub](https://github.com/Elizabeth-Warren)
 
+A collection of programming APIs for accessing various COVID-19 related data on the web - [Postman,com](https://covid-19-apis.postman.com/)
+
+Displaying the MicroPython REPL on displays via FBConsole - [Twitter](https://twitter.com/matt_trentini/status/1243059532781125633) and [GitHub](https://github.com/boochow/FBConsole)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/03/24/together-well-make-it-python-adafruit-circuitpython-circuitpython-micropython-thepsf-adafruit/)? [We'll make it together](https://blog.adafruit.com/2020/03/22/covid/).
 
 ## Made with Mu
