--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -93,6 +93,12 @@ An inexpensive, indoor portable carbon dioxide meter with CircuitPython, HalloWi
 
 Joey Castillo is refining a thermometer hat project using a custom SAMD21E board programmable in CircuitPython and Arduino - [Twitter](https://twitter.com/josecastillo/status/1243349759366217729)
 
+CircUp, a tool to manage and update libraries (modules) on a CircuitPython device, has been updated to 0.0.8 with community contributed features - [GitHub](https://github.com/adafruit/circup/releases/tag/0.0.8)
+
+[![COVID display](../assets/03312020/03312020display.jpg)](https://twitter.com/fede2_cr/status/1244653416732856325)
+
+A pyPortal displaying cases of COVID-19 with CircuitPython from Alvaro Figueroa - [Twitter](https://twitter.com/fede2_cr/status/1244653416732856325) and [GitHub](https://github.com/fede2cr/pyportal_covid19).
+
 Elizabeth Warren's campaign is making its software Open Source, some of which use Python - [Slashdot](https://news.slashdot.org/story/20/03/27/1958235/elizabeth-warrens-campaign-is-making-its-software-open-source) and [GitHub](https://github.com/Elizabeth-Warren)
 
 A collection of programming APIs for accessing various COVID-19 related data on the web - [Postman.com](https://covid-19-apis.postman.com/)
