--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -1,15 +1,15 @@
 ---
 layout: post
-title: "Featured story title here!"
+title: "CircuitPython 5.1.0 Release Candidate 0 and more!"
 date: 2020-03-31 07:00:00 -0800
 categories: weekly
 ---
 
 - [X] Kattni updates
 - [X] change date
-- [ ] update title
-- [ ] Feature story
-- [ ] Update [![](../assets/DIR-LOCATION/)]() for images
+- [X] update title
+- [X] Feature story
+- [X] Update [![](../assets/DIR-LOCATION/)]() for images
 - [ ] All images 550w max only
 - [ ] Link "View this email in your browser."
 
@@ -92,6 +92,10 @@ An inexpensive, indoor portable carbon dioxide meter with CircuitPython, HalloWi
 [![Thermometer Hat](../assets/03312020/03312020hat.jpg)](https://twitter.com/josecastillo/status/1243349759366217729)
 
 Joey Castillo is refining a thermometer hat project using a custom SAMD21E board programmable in CircuitPython and Arduino - [Twitter](https://twitter.com/josecastillo/status/1243349759366217729)
+
+[![Firefighter Bed Lights and Sound](../assets/03312020/03312020fire.jpg)](https://gist.github.com/kwalseth/2fcbd70eee546972ba84e71b99f4e1eb#file-emergency-sounds-lights)
+
+Adding firefighter lights and sound to a child's bed with CircuitPython - [GitHub](https://gist.github.com/kwalseth/2fcbd70eee546972ba84e71b99f4e1eb#file-emergency-sounds-lights)
 
 CircUp, a tool to manage and update libraries (modules) on a CircuitPython device, has been updated to 0.0.8 with community contributed features - [GitHub](https://github.com/adafruit/circup/releases/tag/0.0.8)
 
