new hardware section

--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -115,7 +115,23 @@ Displaying the MicroPython REPL on displays via FBConsole - [Twitter](https://tw
 
 Why Mu? Mu tries to make it as easy as possible to get started with programming but aims to help you graduate to "real" development tools soon after. Everything in Mu is the "real thing" but presented in as simple and obvious way possible. It's like the toddling stage in learning to walk: you're finding your feet and once you're confident, you should move on and explore! Put simply, Mu aims to foster autonomy. Try out Mu today! - [codewith.mu](https://codewith.mu/)
 
-## Coming soon
+## New Boards Supported by CircuitPython
+
+The number of microcontrollers and Single Board  COmputers (SBC) grows every week. This section outlines which boards have been added to CircuitPython.org.
+
+This week we had six new boards added!
+
+- [BeagleBone Black Wireless](https://circuitpython.org/blinka/beaglebone_black_wireless/)
+- [Hifive Unleashed](https://circuitpython.org/blinka/hifive_unleashed/)
+- [Jetson Xavier NX](https://circuitpython.org/blinka/jetson_xavier_nx/)
+- [MCP2221](https://circuitpython.org/blinka/mcp2221/)
+- [Orange Pi PC Plus](https://circuitpython.org/blinka/orange_pi_pc_plus/)
+- [Commander](https://circuitpython.org/board/8086_commander/)
+
+Looking for adding a new board to CircuitPython? It's highly encouraged! Adafruit has two guides to help you do so:
+
+- [Adding a Single Board Computer to PlatformDetect for Blinka](https://learn.adafruit.com/adding-a-single-board-computer-to-platformdetect-for-blinka)
+- Adding a Single Board Computer to Blinka (coming soon)
 
 ## New Learn Guides!
 
