--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -117,7 +117,7 @@ Why Mu? Mu tries to make it as easy as possible to get started with programming 
 
 ## New Boards Supported by CircuitPython
 
-The number of microcontrollers and Single Board  Computers (SBC) grows every week. This section outlines which boards have been added to CircuitPython.org.
+The number of microcontrollers and Single Board  Computers (SBC) grows every week. This section outlines which boards have been added to [CircuitPython.org](https://circuitpython.org/).
 
 This week we had six new boards added!
 
