--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -372,7 +372,7 @@ Once BLE MIDI is done, I'll circle back to sleep and get that code checked in as
 
 ## Upcoming events!
 
-
+WIth the COVID pandemic, most in-perfson events are postponed or cancelled. If you know of virtual events or events that may occure in the next 3-4 months, please let us know on Discord or on Twitter with #CircuitPython.
 
 ## Latest releases
 
@@ -400,13 +400,13 @@ We made this graphic with translated text, we could use your help with that to m
 
 [jobs.adafruit.com](https://jobs.adafruit.com/) has returned and folks are posting their skills (including CircuitPython) and companies are looking for talented makers to join their companies - from Digi-Key, to Hackaday, Microcenter, Raspberry Pi and more.
 
-## NUMBER thanks!
+## 17,476 thanks!
 
-[![NUMBER THANKS](../assets/03312020/32420-17kdiscord.jpg)](https://adafru.it/discord)
+[![17,476 THANKS](../assets/03312020/32420-17kdiscord.jpg)](https://adafru.it/discord)
 
 [![Adafruit Discord](https://discordapp.com/api/guilds/327254708534116352/embed.png?style=banner3)](https://discord.gg/adafruit)
 
-The Adafruit Discord community, where we do all our CircuitPython development in the open, reached over NUMBER humans, thank you! Join today! [https://adafru.it/discord](https://adafru.it/discord)
+The Adafruit Discord community, where we do all our CircuitPython development in the open, has grown quite a bit - now up to 17,476 humans - thank you! Join today! [https://adafru.it/discord](https://adafru.it/discord)
 
 ## ICYMI - In case you missed it
 
