--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -109,6 +109,10 @@ A collection of programming APIs for accessing various COVID-19 related data on 
 
 Displaying the MicroPython REPL on displays via FBConsole - [Twitter](https://twitter.com/matt_trentini/status/1243059532781125633) and [GitHub](https://github.com/boochow/FBConsole)
 
+PyDev of the Week – Abigail Mesrenyame Dogbe on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/03/30/pydev-of-the-week-abigail-mesrenyame-dogbe/)
+
+CircuitPython Weekly Meeting for March 30th, 2020 [on YouTube](https://youtu.be/hT2vLvtNICs) and [on diode.zone](https://diode.zone/videos/watch/468d10e5-50d7-49fa-9a35-37084ee633ba).
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/03/24/together-well-make-it-python-adafruit-circuitpython-circuitpython-micropython-thepsf-adafruit/)? [We'll make it together](https://blog.adafruit.com/2020/03/22/covid/).
 
 ## Made with Mu
@@ -376,13 +380,13 @@ WIth the COVID pandemic, most in-person events are postponed or cancelled. If yo
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.0.0](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [5.1.0-rc.0](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200327](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.2](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0a5](https://www.python.org/download/pre-releases/).
 
 [1646 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
