--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -79,6 +79,10 @@ Using a Circuit Playground and Gizmo display to move a sprite on screen (with co
 
 Bryan from the Adafruit team (@siddacious) has created an apps menu for the Open Hardware Summit wrist badge. - [Twitter](https://twitter.com/pdp7/status/1243297511747575810)
 
+[![Clock Minima](../assets/03312020/03312020clock.jpg)](https://www.youtube.com/watch?v=5wBRmIr8cD4)
+
+Clock Minima is a modular clock builder in CircuitPython. It provides simultaneous time output to REPL, LED display, and a displayio-based screen. - [YouTube](https://www.youtube.com/watch?v=5wBRmIr8cD4)
+
 [![CircuitPython on ZynqBerry](../assets/03312020/03312020zynq.jpg)](https://twitter.com/Hacksterio/status/1244613681482289153)
 
 CircuitPython slithers its way onto the ZynqBerry SBC - [Twitter](https://twitter.com/Hacksterio/status/1244613681482289153) and [Hackster.io](https://www.hackster.io/whitney-knitter/pi-os-for-zynqberry-installing-adafruit-circuitpython-41ed67)
