--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -376,7 +376,21 @@ Once BLE MIDI is done, I'll circle back to sleep and get that code checked in as
 
 ## Upcoming events!
 
-WIth the COVID pandemic, most in-person events are postponed or cancelled. If you know of virtual events or events that may occur in the next 3-4 months, please let us know on Discord or on Twitter with hashtag #CircuitPython.
+The PyCon US 2020 team announces planned talks, tutorials, posters, and much more online. 
+
+To participate, Go to the [PyCon US 2020 Remote page](https://us.pycon.org/2020/remote/) to subscribe to receive 5-8 email notifications over the next 6 weeks for published online content. Also you may subscribe to the [PyCon 2020 YouTube Channel](https://www.youtube.com/channel/UCMjMBMGt0WJQLeluw6qNJuA). Expected content:
+
+- Recorded talks and tutorials
+- Online Summit and Hatchery programs
+- Poster presenters sharing their creations
+- Startup Row company presentations
+- Sponsor workshop videos and job postings
+
+The organizers appreciate the community’s patience as they work through the logistics of gathering and uploading the recordings.  The goal is to begin providing content about April 15, 2020, right when PyCon was scheduled to begin.
+
+**Send Your Events In**
+
+As for other events, with the COVID pandemic, most in-person events are postponed or cancelled. If you know of virtual events or events that may occur in the next 3-4 months, please let us know on Discord or on Twitter with hashtag #CircuitPython.
 
 ## Latest releases
 
