--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -376,6 +376,8 @@ Once BLE MIDI is done, I'll circle back to sleep and get that code checked in as
 
 ## Upcoming events!
 
+[![PyCon US 2020](../assets/03312020/03312020pycon.jpg)](https://us.pycon.org/2020/remote/)
+
 The PyCon US 2020 team announces planned talks, tutorials, posters, and much more online. 
 
 To participate, Go to the [PyCon US 2020 Remote page](https://us.pycon.org/2020/remote/) to subscribe to receive 5-8 email notifications over the next 6 weeks for published online content. Also you may subscribe to the [PyCon 2020 YouTube Channel](https://www.youtube.com/channel/UCMjMBMGt0WJQLeluw6qNJuA). Expected content:
