--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -111,6 +111,10 @@ A PyPortal displaying cases of COVID-19 with CircuitPython from Alvaro Figueroa 
 
 6 Python Libraries to Interpret Machine Learning Models and Build Trust - [Analytics Vidhya](https://www.analyticsvidhya.com/blog/2020/03/6-python-libraries-interpret-machine-learning-models/)
 
+[![The Zen of Python](../assets/03312020/03312020python.jpg)](https://twitter.com/GarikoIbrahima/status/1244256338873651206)
+
+The Zen of Python by Tim Peters - [Twitter](https://twitter.com/GarikoIbrahima/status/1244256338873651206)
+
 Elizabeth Warren's campaign is making its software Open Source, some of which use Python - [Slashdot](https://news.slashdot.org/story/20/03/27/1958235/elizabeth-warrens-campaign-is-making-its-software-open-source) and [GitHub](https://github.com/Elizabeth-Warren)
 
 A collection of programming APIs for accessing various COVID-19 related data on the web - [Postman.com](https://covid-19-apis.postman.com/)
