--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -127,6 +127,10 @@ Displaying the MicroPython REPL on displays via FBConsole - [Twitter](https://tw
 
 Programming the M5Stack Atom, using MicroPython, to transfer data to a LoRaWAN gateway with The Things Network - [LeMaRiva](https://lemariva.com/blog/2020/03/m5stack-atom-lorawan-node-running-micropython) and [YouTube](https://youtu.be/Nu60jVDbLW8)
 
+PyDev of the Week – Abigail Mesrenyame Dogbe on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/03/30/pydev-of-the-week-abigail-mesrenyame-dogbe/)
+
+CircuitPython Weekly Meeting for March 30th, 2020 [on YouTube](https://youtu.be/hT2vLvtNICs) and [on diode.zone](https://diode.zone/videos/watch/468d10e5-50d7-49fa-9a35-37084ee633ba).
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/03/24/together-well-make-it-python-adafruit-circuitpython-circuitpython-micropython-thepsf-adafruit/)? [We'll make it together](https://blog.adafruit.com/2020/03/22/covid/).
 
 ## Made with Mu
