--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -49,6 +49,14 @@ CircuitPython 5.1.0-rc0 is the latest minor revision of CircuitPython, and now a
 
 Thank you to all who used, tested, contributed, helped out, and participated on GitHub and/or Discord. - [Blog](https://blog.adafruit.com/2020/03/26/circuitpython-5-1-0-rc-0-released-adafruit-circuitpython/)
 
+## Adafruit Update
+
+Adafruit Industries continues to run with 100% of employees being paid and continuing to work. Most are working remotely, with some working in the Manhattan, New York factory as an essential service and business under NYC Executive Order 202.6 Capabilities. Adafruit was deemed an essential service to distribute/make some PPE (Personal Protection Equipment) such as face shields, and manufacturer electronics for essential life-saving/preserving equipment and development which is needed in New York and beyond. -[Blog](https://blog.adafruit.com/2020/03/22/covid/)
+
+The CircuitPython team is going full steam ahead in development and rollout. We're expecting CircuitPython 5.1.0 to be stable and released soon and features for 5.2.x are being discussed. Would you like to join us? On Discord, head to https://adafru.it/discord to discuss things. And check out [Awesome CircuitPython](https://github.com/adafruit/awesome-circuitpython/blob/master/README.md) for a wide range of information.
+
+*Ed: Are you working on projects with CircuitPython or have good CircuitPython/MicroPython/Python news? Tag your material on Twitter with hashtag #CircuitPython. I'll scan and include items for the next newsletter. Thanks!*
+
 ## HackSpace Magazine Issue 29
 
 [![HackSpace Magazine Issue 29](../assets/03312020/03312020hs.jpg)](https://hackspace.raspberrypi.org/issues/29)
